Terraform/modules/network/vpc.tf
resource "aws_vpc" "ecommerce-vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.environment}-vpc"
  }
}
